# azmcp-obo-template

./: .gitignore  DEPLOYMENT.md  EntraIdConfig.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  validate.sh
graph-mcp-server/: .env.example  Dockerfile  EMAIL_FORMATTING_GUIDE.md  README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt  run_tests.sh  test_e2e.py  test_server.py  validate_server.py
graph-mcp-server/src/: __init__.py  __main__.py  auth.py  config.py  graph_client.py  server.py
infra/: main.bicep
infra/modules/: aca-graph-mcp.bicep  aca-graph-mcp.json  aca-infrastructure.json
